--- a/source-code-modeler/.classpath
+++ b/source-code-modeler/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="lib" path="resources/jars/plantuml.jar"/>
+	<classpathentry kind="lib" path="resources/jars/graphviz-api-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
